--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -287,7 +287,7 @@ const formatDate = (string) => {
         pre {
           padding: var(--unit);
           border: 1px solid var(--surface-3);
-          border-radius: calc(var(--unit) * 0.5);
+          border-radius: var(--radius);
           margin-bottom: var(--unit);
           font-size: 14px;
           line-height: 1.4;
