--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -3,10 +3,11 @@
   --unit: 1rem;
 
   /* Colors */
-  --surface-0: #181818;
-  --surface-1: #535353;
-  --surface-2: #767676;
-  --surface-3: #f5f5f5;
+  --surface-0: #202020;
+  --surface-1: #838383;
+  --surface-2: #8d8d8d;
+  --surface-3: #e8e8e8; /* Border */
+  --surface-4: #f9f9f9; /* Low background */
   --color-brand: #003dee;
 
   /* Types */
@@ -21,6 +22,7 @@
 
   /* Misc */
   --transition: 0.2s ease;
+  --radius: calc(var(--unit) * 0.5);
 }
 
 @media screen and (min-width: 800px) {
@@ -86,4 +88,12 @@ body {
 
 .surface-2 {
   color: var(--surface-2);
+}
+
+.surface-3 {
+  color: var(--surface-2);
+}
+
+.color-brand {
+  color: var(--color-brand);
 }
