--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -65,8 +65,8 @@
 
   .section {
     grid-column: 1/4;
-    padding-top: 15%;
-    padding-bottom: 15%;
+    padding-top: var(--body-gap);
+    padding-bottom: var(--body-gap);
     position: relative;
   }
 
