--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -116,13 +116,13 @@ import content from "../content";
 
       @keyframes float {
         0% {
-          transform: translateY(0);
+          transform: rotate(0deg) translateX(0px) rotate(0deg);
         }
         50% {
-          transform: translateY(-20px) translateX(-5px);
+          transform: rotate(-180deg) translateX(10px) rotate(180deg);
         }
         100% {
-          transform: translateY(0);
+          transform: rotate(0deg) translateX(0px) rotate(0deg);
         }
       }
     }
