feat: first ui item

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -54,6 +54,10 @@ const { title } = Astro.props;
     &.projects:before {
       background-image: url("/assets/section.png");
     }
+
+    &.garden:before {
+      background-image: url("/assets/garden.png");
+    }
   }
 
   @media screen and (min-width: 800px) {
