--- a/src/components/UIGallery.astro
+++ b/src/components/UIGallery.astro
@@ -4,18 +4,18 @@
 ---
 
 
-<div>
+<div class="sandbox-list">
   <Sandbox 
     client:only="react" 
     sandboxId="pztylm" 
     title="Glow button" 
-    description="CSS-only glowy button with transparent background" 
+    description="CSS-only glowy button with transparent background." 
   />
 
-  <!-- <Sandbox 
-  client:only="react" 
-  sandboxId="pztylm" 
-  title="Glow button" 
-  description="CSS-only glowy button with transparent background" 
-/> -->
+  <Sandbox 
+    client:only="react" 
+    sandboxId="hmmmvf" 
+    title="Independent gradients" 
+    description="Independent stroke and fill gradients without extra elements." 
+  />
 </div>
