--- a/src/components/UIGallery.astro
+++ b/src/components/UIGallery.astro
@@ -18,4 +18,13 @@
     title="Independent gradients" 
     description="Independent stroke and fill gradients without extra elements." 
   />
+
+
+  <Sandbox 
+    client:only="react" 
+    sandboxId="zwpydg" 
+    title="Windland P5.js" 
+    description="Experience generative art with randomized dots within a 2D noise function." 
+    showRefreshButton
+  />
 </div>
