--- a/src/styles/sandbox.css
+++ b/src/styles/sandbox.css
@@ -7,30 +7,22 @@
 .sandbox-details {
   display: flex;
   margin: calc(var(--unit)) 0;
-  gap: calc(var(--unit));
-
-  & button {
-    background: none;
-    cursor: pointer;
-    display: flex;
-    gap: calc(var(--unit) / 4);
-    transform: translateY(3px);
-
-    &[data-open="true"] svg {
-      transform: rotate(180deg) translate(0, -1px);
-    }
-  }
-}
-
-.sandbox-details__title {
-  font-weight: 500;
+  gap: calc(var(--unit) * 0.5);
+  flex-direction: column;
 }
 
 .sandbox-details__content {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  gap: 0.5em;
+}
+
+.sandbox-details__title {
+  font-weight: 500;
+  flex: 1;
+}
+
+.sandbox-details__cta [data-open="true"] svg {
+  transform: rotate(180deg) translate(0, -1px);
 }
 
 /**
@@ -45,13 +37,17 @@
 
   --sp-colors-clickable: var(--surface-0);
   --sp-colors-hover: var(--surface-1);
-
   --sp-colors-accent: var(--color-brand);
 
   /* syntax */
   --sp-syntax-color-tag: var(--color-brand);
   --sp-syntax-color-string: var(--color-brand);
-  /* --sp-syntax-color-keyword: var(--color-brand); */
+  --sp-syntax-color-static: var(--color-brand);
+
+  --sp-syntax-color-definition: #0e2b81;
+  --sp-syntax-color-keyword: #466bda;
+
   --sp-syntax-color-property: var(--surface-0);
-  --sp-syntax-color-plain: var(--surface-2);
+  --sp-syntax-color-plain: var(--surface-1);
+  --sp-syntax-color-punctuation: var(--surface-2);
 }
