--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,11 +7,7 @@ import content from "../content";
   <div class="grid">
     <h1 class="type_main">
       <span class="icon"><span></span></span>
-      {
-        content.hero.title
-          .split("")
-          .map((c) => <span class="type-animated">{c}</span>)
-      }
+      {content.hero.title}
       <span class="surface-2">{content.hero.headline}</span>
     </h1>
 
@@ -71,7 +67,6 @@ import content from "../content";
 
     .type_main {
       grid-column: 1/3;
-      margin-right: calc(var(--unit) * -3);
     }
 
     .type_sub {
@@ -84,20 +79,6 @@ import content from "../content";
     width: calc(var(--unit) * 1);
     height: calc(var(--unit) * 1);
     left: calc(var(--unit) * -1.4);
-
-    @media screen and (min-width: 1000px) {
-      animation: 1s 3s travel ease forwards;
-
-      @keyframes travel {
-        0% {
-          transform: translateY(0);
-        }
-
-        100% {
-          transform: translateY(80px) translateX(394px);
-        }
-      }
-    }
 
     span {
       content: "";
@@ -113,49 +94,6 @@ import content from "../content";
         width: calc(var(--unit) * 1.5);
         height: calc(var(--unit) * 1.5);
         left: calc(var(--unit) * -2.5);
-      }
-
-      @media screen and (min-width: 1000px) {
-        animation: 10s float ease infinite;
-        @keyframes float {
-          0% {
-            transform: rotate(0deg) translateX(0px) rotate(0deg);
-          }
-          50% {
-            transform: rotate(-180deg) translateX(10px) rotate(180deg);
-          }
-          100% {
-            transform: rotate(0deg) translateX(0px) rotate(0deg);
-          }
-        }
-      }
-    }
-  }
-
-  @media screen and (min-width: 1000px) {
-    .type-animated {
-      @for $i from 0 through 13 {
-        &:nth-child(#{$i}) {
-          animation: 0s #{3 + ($i/20)}s select ease forwards;
-        }
-      }
-
-      @for $i from 13 through 34 {
-        &:nth-child(#{$i}) {
-          animation: 0s 3.65s select ease forwards;
-        }
-      }
-
-      @for $i from 34 through 57 {
-        &:nth-child(#{$i}) {
-          animation: 0s #{3.65 + (($i - 34) / 200)}s select ease forwards;
-        }
-      }
-
-      @keyframes select {
-        100% {
-          background-color: rgba(255, 225, 0, 0.3);
-        }
       }
     }
   }
