--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,9 @@ import Social from "./Social.astro";
 ---
 
 <footer class="footer grid">
-  <p class="surface-2">Danilo Woznica</p>
+  <p class="color-2">Danilo Woznica</p>
 
-  <div class="hero_social surface-2">
+  <div class="hero_social color-2">
     <Social />
   </div>
 </footer>
