--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,15 +5,15 @@ import content from "../content";
 
 <header class="hero">
   <div class="grid">
-    <h1 class="type_main">
+    <h1 class="text-large">
       <span class="icon"><span></span></span>
       {content.hero.title}
-      <span class="surface-2">{content.hero.headline}</span>
+      <span class="color-2">{content.hero.headline}</span>
     </h1>
 
-    <h2 class="type_sub">Danilo Woznica</h2>
+    <h2 class="text-base">Danilo Woznica</h2>
 
-    <div class="hero_social">
+    <div class="hero_social color-1">
       <Social />
     </div>
   </div>
@@ -32,14 +32,13 @@ import content from "../content";
     justify-content: space-between;
   }
 
-  .type_main {
+  .text-large {
     margin-bottom: 3rem;
   }
 
   .hero_social {
     display: flex;
     align-items: center;
-    color: var(--surface-1);
   }
 
   .hero_img {
@@ -65,11 +64,11 @@ import content from "../content";
       aspect-ratio: 1.6;
     }
 
-    .type_main {
+    .text-large {
       grid-column: 1/3;
     }
 
-    .type_sub {
+    .text-base {
       grid-column: 1/2;
     }
   }
