--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -4,7 +4,7 @@ const { title } = Astro.props;
 
 <section class={`section grid ${title.toLowerCase()}`} id={title.toLowerCase()}>
   <div>
-    <h2 class={`type_main ${title.toLowerCase()} sticky`}>
+    <h2 class={`text-large ${title.toLowerCase()} sticky`}>
       {title}
     </h2>
   </div>
@@ -26,7 +26,7 @@ const { title } = Astro.props;
     }
   }
 
-  .type_main,
+  .text-large,
   .section {
     &:before {
       content: "";
@@ -66,7 +66,7 @@ const { title } = Astro.props;
     }
   }
 
-  .type_main {
+  .text-large {
     margin-bottom: calc(var(--unit) * 2);
 
     &:before {
@@ -78,7 +78,7 @@ const { title } = Astro.props;
         position: absolute;
         background-position: right center;
 
-        top: calc(var(--unit) * 0.35);
+        top: calc(var(--unit) * 0.2);
         left: calc(var(--unit) * -2.5);
         width: calc(var(--unit) * 1.6);
         height: calc(var(--unit) * 1.6);
@@ -87,7 +87,7 @@ const { title } = Astro.props;
   }
 
   @media screen and (min-width: 800px) {
-    .type_main {
+    .text-large {
       grid-column: 1/2;
       margin: 0;
       margin-top: calc(var(--unit) * -0.5);
