fix: add small font-size variation

--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -98,7 +98,7 @@ const { data } = Astro.props;
                 </h1>
                 <p class="color-1">{item.frontmatter.tagline}</p>
 
-                <p class="text-highlight">{renderCallToAction()}</p>
+                <p class="text-highlight text-small">{renderCallToAction()}</p>
               </div>
             </article>
           </a>
