--- a/src/styles/_typography.css
+++ b/src/styles/_typography.css
@@ -1,24 +1,3 @@
-.text-large {
-  font-family: var(--serif);
-  font-weight: 400;
-  font-size: var(--text-size-large);
-
-  line-height: 1.4;
-
-  position: relative;
-  text-wrap: balance;
-}
-
-.text-medium {
-  font-size: var(--text-size-base);
-  font-weight: 500;
-}
-
-.text-base {
-  font-size: var(--text-size-base);
-  font-weight: 400;
-}
-
 .text-highlight {
   background: none;
   cursor: pointer;
@@ -40,6 +19,31 @@
   &:hover {
     opacity: 0.7;
   }
+}
+
+.text-large {
+  font-family: var(--serif);
+  font-weight: 400;
+  font-size: var(--text-size-large);
+
+  line-height: 1.4;
+
+  position: relative;
+  text-wrap: balance;
+}
+
+.text-medium {
+  font-size: var(--text-size-base);
+  font-weight: 500;
+}
+
+.text-base {
+  font-size: var(--text-size-base);
+  font-weight: 400;
+}
+
+.text-small {
+  font-size: var(--text-size-small);
 }
 
 .text-content p {
