--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -14,6 +14,7 @@
   /* Types */
   --text-size-large: calc(var(--unit) * 1.4);
   --text-size-base: var(--unit);
+  --text-size-small: calc(var(--unit) * 0.8);
 
   /* Font-family */
   --serif: "Merriweather", serif;
