--- a/src/components/UIGallery.astro
+++ b/src/components/UIGallery.astro
@@ -1,30 +1,36 @@
 ---
-  import {Sandbox} from "./Sandbox"
-  import "../styles/sandbox.css"
+import { Sandbox } from "./Sandbox";
+import "../styles/sandbox.css";
 ---
 
-
 <div class="sandbox-list">
-  <Sandbox 
-    client:only="react" 
-    sandboxId="pztylm" 
-    title="Glow button" 
-    description="CSS-only glowy button with transparent background." 
+  <Sandbox
+    client:only="react"
+    sandboxId="n9g694"
+    title="CSS only album navigation"
+    description="Reproduction of 'Apple Music: 100 best albums' website but using only CSS."
+    showRefreshButton
   />
 
-  <Sandbox 
-    client:only="react" 
-    sandboxId="hmmmvf" 
-    title="Independent gradients" 
-    description="Independent stroke and fill gradients without extra elements." 
+  <Sandbox
+    client:only="react"
+    sandboxId="pztylm"
+    title="Glow button"
+    description="CSS-only glowy button with transparent background."
   />
 
+  <Sandbox
+    client:only="react"
+    sandboxId="hmmmvf"
+    title="Independent gradients"
+    description="Independent stroke and fill gradients without extra elements."
+  />
 
-  <Sandbox 
-    client:only="react" 
-    sandboxId="zwpydg" 
-    title="Windland P5.js" 
-    description="Experience generative art with randomized dots within a 2D noise function." 
+  <Sandbox
+    client:only="react"
+    sandboxId="zwpydg"
+    title="Windland P5.js"
+    description="Experience generative art with randomized dots within a 2D noise function."
     showRefreshButton
   />
 </div>
