--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,45 +6,45 @@
     <h2 class="text-large">About me</h2>
 
     <div class="text-content color-1">
-      <p>
-        Hey, my name is Danilo Woznica. I’m from a small town in the south of
-        Brazil where I was brought up, and now I live in one of the best places
-        to be a wine lover - have you tried a great bottle of Portuguese wine?
-      </p>
-
-      <p>
-        It took me a while to realize that design is everywhere. No matter where
-        you look, how you feel or interact, everything aims to solve a problem
-        and has purposes, regardless if these things came from nature or were
-        manufactured. With these ideas in my mind, I made my way into Design
-        college back in 2012, which was mostly focused on product design, and
-        since then I’ve been trying to introduce most of the concepts from the
-        design process to different areas of my professional life, as much as I
-        can.
-      </p>
-
-      <p>
-        In my early coding career, which started in mid 2010, I realized that at
-        some level I could find the same problems both in conceptual design and
-        digital products. Thanks to many friends, I was introduced to the
-        ReactJs community, where I found many opportunities to improve the way
-        we interact with web applications, and as a result, I could narrow the
-        gap between the effort of building solid applications with a great user
-        experience. These challenges have helped me shape the necessary skills
-        to become a front-end developer driven by problems to be solved.
-      </p>
-
-      <p>
-        This journey brought me to CodeSandbox, where I’m proud that my work
-        gets to many developers and it makes their life easier, providing a
-        remarkable experience to express their own ideas through coding, and
-        making products more enjoyable. Furthermore,
-        <strong
-          >the kinds of challenges I face every day make me go beyond what
-          inspires me and make me not only solve problems but empower users to
-          solve their problems themselves.</strong
-        >
-      </p>
+      <ul>
+        <li>
+          <strong class="text-medium">I see code as a tool for design.</strong> What
+          I build is meant to solve real users' problems, and I will strive for the
+          best solution and the most polished experience. I'm a coworker on the design
+          team.
+        </li>
+        <li>
+          <strong class="text-medium">I'm a self-starter.</strong> The unknown doesn't
+          hold me back. I can find my way through the uncertainty and then set priorities
+          and stay focused. Independent worker.
+        </li>
+        <li>
+          <strong class="text-medium">I'm a fast-paced problem-solver.</strong> In
+          challenging moments, I can wear as many hats as needed. There are moments
+          when the job just needs to get done.
+        </li>
+        <li>
+          <strong class="text-medium">I'm obsessed with the unknown.</strong> I like
+          engaging in activities that require me to dive deep into the uncertainty,
+          from small details to big issues.
+        </li>
+        <li>
+          <strong class="text-medium">I have an outstanding curiosity.</strong> I
+          always strive to learn more and understand the exotic, the undiscovered,
+          or the unmapped.
+        </li>
+        <li>
+          <strong class="text-medium"
+            >I want you to be involved in my creation process.</strong
+          > While I can move quickly alone, we can achieve much more as a team.
+        </li>
+        <li>
+          <strong class="text-medium"
+            >I prioritize honest and pragmatic communication.</strong
+          > No ego, no assumptions. My words will always be well-intentioned, even
+          if direct.
+        </li>
+      </ul>
     </div>
   </article>
 </section>
@@ -116,6 +116,22 @@
       left: calc(var(--unit) * -3);
       width: calc(var(--unit) * 2);
       height: calc(var(--unit) * 2);
+    }
+  }
+
+  ul {
+    padding-left: 1em;
+  }
+
+  li {
+    list-style: bullet;
+    position: relative;
+    padding-bottom: 1em;
+
+    &:before {
+      content: "-";
+      position: absolute;
+      left: -1em;
     }
   }
 </style>
